org.aion.avm.core/test/org/aion/avm/core/rejection/RejectStaticStringCall.java
package org.aion.avm.core.rejection;


public class RejectStaticStringCall {
    public String callStaticString() {
        return String.join(".", "elt", "one", "two");
    }
}
